--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "earcut": "2.2.2",
     "gl-renderer": "0.13.6",
+    "ogl": "0.0.59",
     "tess2": "1.0.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
