--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ogl": "0.0.59",
     "spritejs": "3.7.28",
     "tess2": "1.0.0",
+    "three": "0.124.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
